# cairo-win32

./: README.md  demo1.c  meson.build
.github/: build-win32.yaml
.github/workflows/: build-win32.yaml
cross/: win32-x64.txt  win32-x86.txt
include/cairo/: cairo-features.h
lib/: cairo.lib  png16.lib  z.lib
lib/pkgconfig/: cairo-dwrite-font.pc  cairo-pdf.pc  cairo-png.pc  cairo-ps.pc  cairo-script-interpreter.pc  cairo-script.pc  cairo-svg.pc  cairo-tee.pc  cairo-win32-font.pc  cairo-win32.pc  cairo.pc  libpng.pc  pixman-1.pc  zlib.pc
subprojects/: cairo.wrap
test/: meson.build
